<resources>
    <string name="app_name">MoViews</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_information">Information</string>
    <string name="title_collapsed">MoViews Message!</string>

    <string name="text_trending_now">Trending Now</string>
    <string name="text_upcoming">Upcoming</string>
    <string name="text_now_playing">Now Playing</string>
    <string name="text_top_searches">Top Searches</string>
    <string name="text_enter_the_name_of_movie">Enter the name of movie…</string>
    <string name="text_your_favorites_movie">Your favorites movie</string>
    <string name="text_notification">Notification</string>
    <string name="text_info">App made by Manh Hung trainee Android</string>
    <string name="text_imageBack">imageBack</string>
    <string name="text_yes">YES</string>
    <string name="text_no">NO</string>
    <string name="message_dialog">Do you want to delete this movie?</string>
    <string name="text_score">Score</string>
    <string name="text_release">Release date</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_cast">Cast</string>
    <string name="text_company">Company</string>
    <string name="text_recommendation">More like this</string>
    <string name="text_name">"Name: "</string>
    <string name="text_birthday">"Birthday: "</string>
    <string name="text_place">"Place: "</string>
    <string name="text_headquarters">"Headquarters: "</string>
    <string name="text_home_page">"Home page: "</string>
    <string name="text_country">"Country: "</string>
    <string name="text_know_for">Know For</string>
    <string name="text_content"><u>Come and see!</u></string>
    <string name="text_collapsed">Expand to show!</string>
    <string name="text_expanded">MoViews bring to you:</string>
    <string name="text_retry">Retry</string>
    <string name="text_no_internet">Network not available</string>
</resources>
