<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerBanner"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_220"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabIndicator"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_20"
            android:background="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/textTrendingNow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPagerBanner"
            app:layout_constraintVertical_bias="0.0"
            app:tabBackground="@drawable/indicator_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

        <TextView
            android:id="@+id/textTrendingNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/text_trending_now"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabIndicator" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTrendingNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTrendingNow" />

        <TextView
            android:id="@+id/textUpcoming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_upcoming"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerTrendingNow" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerUpcoming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textUpcoming" />

        <TextView
            android:id="@+id/textNowPlaying"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_now_playing"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerUpcoming" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerNowPlaying"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textNowPlaying" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
