<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black">

        <ImageView
            android:id="@+id/imageBackdrop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="5:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp_10"
            android:padding="@dimen/dp_16"
            android:scaleType="center"
            android:src="@drawable/ic_back"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1" />

        <View
            android:id="@+id/viewDetail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/color_dark_gray"
            app:layout_constraintDimensionRatio="5:3.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageBackdrop" />

        <ImageView
            android:id="@+id/imagePosterDetail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp_4"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="1:1.3"
            app:layout_constraintStart_toStartOf="@id/viewDetail"
            app:layout_constraintTop_toTopOf="@id/viewDetail"
            app:layout_constraintWidth_percent="0.3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerGenres"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp_4"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintDimensionRatio="1:0.15"
            app:layout_constraintEnd_toEndOf="@id/viewDetail"
            app:layout_constraintStart_toEndOf="@id/imagePosterDetail"
            app:layout_constraintTop_toTopOf="@id/viewDetail" />

        <TextView
            android:id="@+id/textOverview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dp_4"
            android:ellipsize="end"
            android:maxLines="6"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintDimensionRatio="1:0.416"
            app:layout_constraintEnd_toEndOf="@id/viewDetail"
            app:layout_constraintStart_toEndOf="@id/imagePosterDetail"
            app:layout_constraintTop_toBottomOf="@id/recyclerGenres" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.001"
            app:layout_constraintStart_toStartOf="@id/viewDetail"
            app:layout_constraintTop_toBottomOf="@id/imagePosterDetail" />

        <TextView
            android:id="@+id/textVoteDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:textSize="@dimen/sp_18"
            app:drawableStartCompat="@drawable/ic_star_24"
            app:layout_constraintEnd_toStartOf="@id/imageFavoriteDetail"
            app:layout_constraintStart_toStartOf="@id/viewDetail"
            app:layout_constraintTop_toBottomOf="@id/viewLine" />

        <TextView
            android:id="@+id/textScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_score"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintStart_toStartOf="@id/textVoteDetail"
            app:layout_constraintTop_toBottomOf="@id/textVoteDetail" />

        <ImageView
            android:id="@+id/imageFavoriteDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_20"
            android:padding="@dimen/dp_4"
            android:src="@drawable/ic_favorite"
            app:layout_constraintEnd_toStartOf="@id/textDate"
            app:layout_constraintStart_toEndOf="@id/textVoteDetail"
            app:layout_constraintTop_toBottomOf="@id/viewLine" />

        <TextView
            android:id="@+id/textFavorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/text_favorite"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toStartOf="@id/textDateRelease"
            app:layout_constraintStart_toStartOf="@id/imageFavoriteDetail"
            app:layout_constraintTop_toBottomOf="@+id/imageFavoriteDetail" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_20"
            android:padding="@dimen/dp_4"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_14"
            app:drawableStartCompat="@drawable/ic_date"
            app:layout_constraintEnd_toEndOf="@id/viewDetail"
            app:layout_constraintStart_toEndOf="@id/imageFavoriteDetail"
            app:layout_constraintTop_toBottomOf="@id/viewLine" />

        <TextView
            android:id="@+id/textDateRelease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_release"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="@id/viewDetail"
            app:layout_constraintStart_toStartOf="@id/textDate"
            app:layout_constraintTop_toBottomOf="@id/textDate" />

        <View
            android:id="@+id/viewCast"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/color_dark_gray"
            app:layout_constraintDimensionRatio="5:2.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDetail" />

        <TextView
            android:id="@+id/textCast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/text_cast"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintStart_toStartOf="@id/viewCast"
            app:layout_constraintTop_toTopOf="@id/viewCast" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@id/viewCast"
            app:layout_constraintTop_toBottomOf="@id/textCast" />

        <View
            android:id="@+id/viewCompany"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/color_dark_gray"
            app:layout_constraintDimensionRatio="5:2.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewCast" />

        <TextView
            android:id="@+id/textCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/text_company"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintStart_toStartOf="@id/viewCompany"
            app:layout_constraintTop_toTopOf="@id/viewCompany" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@id/viewCompany"
            app:layout_constraintTop_toBottomOf="@id/textCompany" />

        <View
            android:id="@+id/viewRecommend"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/color_dark_gray"
            app:layout_constraintDimensionRatio="5:2.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewCompany" />

        <TextView
            android:id="@+id/textRecommend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/text_recommendation"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintStart_toStartOf="@id/viewRecommend"
            app:layout_constraintTop_toTopOf="@id/viewRecommend" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRecommend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@id/viewRecommend"
            app:layout_constraintTop_toBottomOf="@id/textRecommend" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
